added more styles to my code

--- a/index.html
+++ b/index.html
@@ -44,9 +44,13 @@ rel="stylesheet">
                 <p>We have several thousand apartments for every taste in every corner of the globe</p>
                 <button class="search">
                         <img src="image/location.svg" alt="" class="location">
-                        <a href="#" class="btn-white"><spna class="where" >Where</spna> <br><span class="Destination">Search Destination</span></a>
-                        <img src="image/button.1.svg" class="ellipse" alt="">
-                </button>    
+                        <a href="#" class="btn-white"></a>
+                </button>  
+                <div class="there">
+                    <h3 class="where" id="place">Where</h3>
+                    <h4 class="Destination">Search Destination</h4>
+                    <img src="image/button.1.svg" class="ellipse" alt="">
+                    </div>  
             </div>        
     </section>
         
@@ -71,8 +75,8 @@ rel="stylesheet">
         </section>
     <!--end of method-->
     <section class="special-offer">
+        <h2>Special offers</h2>
         <div class="offer">
-            <h2>Special offers</h2>
             <img src="image/1-paint.png" class="walls" alt="">
             <button class="rating-button">
             <a href="#" class="btn-offer"></a>
@@ -125,10 +129,15 @@ rel="stylesheet">
                 <img src="image/lady.png" class="lady" alt="">
                 <P>I quickly found the right tour for me, but I had a few questions about the hotel, I wrote to tech support and they answered all my questions within an hour. The vacation itself was perfect. Thank you very much. I will come back again and again.</P>
                 <P>Jannike Borg, Publisher</P>
+                <img src="image/man1.png" class="lady" alt="">
+                <P>I quickly found the right tour for me, but I had a few questions about the hotel, I wrote to tech support and they answered all my questions within an hour. The vacation itself was perfect. Thank you very much. I will come back again and again.</P>
+                <P>Jannike Borg, Publisher</P>
+                <img src="image/man2.png" class="lady" alt="">
+                <P>I quickly found the right tour for me, but I had a few questions about the hotel, I wrote to tech support and they answered all my questions within an hour. The vacation itself was perfect. Thank you very much. I will come back again and again.</P>
+                <P>Jannike Borg, Publisher</P>
                 <button class="search">
                     <a href="#" class="btn-red">More reviews</a>
-                </button>    
-                
+                </button> 
             </div>
     </section>
     <!--end of review section-->
