--- a/index.html
+++ b/index.html
@@ -70,27 +70,24 @@ rel="stylesheet">
         <div class="special">
             <!-- <div class="offer">
                 <img src="image/bed1.png" class="room" alt="">
-                <img src="image/Star 1.svg" class="star" alt="">
-                <img src="image/heart.svg" class="heart" alt="">
-                <h3 class="rate">4.8</h3>
+                <img src="image/rating.svg" class="star" alt="">
+                <img src="image/favorite (1).svg" class="heart" alt="">
                 <p>Wilderness Club at Big <br> Cedder</p>
                 <h4>28 October - 1 November</h4>
                 <h5><span>$2016</span>/6 night</h5>
             </div>
             <div class="offer">
                 <img src="image/bed2.png" class="room" alt="">
-                <img src="image/Star 1.svg" class="star" alt="">
-                <img src="image/heart.svg" class="heart" alt="">
-                <h3 class="rate">4.8</h3>
+                <img src="image/rating.svg" class="star" alt="">
+                <img src="image/favorite (1).svg" class="heart" alt="">
                 <p>Wilderness Club at Big <br> Cedder</p>
                 <h4>28 October - 1 November</h4>
                 <h5><span>$2016</span> /6 night</h5>
             </div>
             <div class="offer">
                 <img src="image/bed3.png" class="room" alt="">
-                <img src="image/Star 1.svg"class="star" alt="">
-                <img src="image/heart.svg" class="heart" alt="">
-                <h3 class="rate">4.8</h3>
+                <img src="image/rating.svg"class="star" alt="">
+                <img src="image/favorite (1).svg" class="heart" alt="">
                 <p>Wilderness Club at Big <br> Cedder</p>
                 <h4>28 October - 1 November</h4>
                 <h5><span>$2016</span>/6 night</h5>
